--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,14 +13,18 @@ const { noMarginTop = false } = Astro.props;
 
 <footer class:list={["w-full", { "mt-auto": !noMarginTop }]}>
   <Hr noPadding />
+  <br>
+   <p style="text-align: center;">Open Source changes everything!</p>
+
   <div
     class="flex flex-col items-center justify-between py-6 sm:flex-row-reverse sm:py-4"
   >
-    <Socials centered />
+
+    <!-- <Socials centered />
     <div class="my-2 flex flex-col items-center whitespace-nowrap sm:flex-row">
       <span>Copyright &#169; {currentYear}</span>
       <span class="hidden sm:inline">&nbsp;|&nbsp;</span>
       <span>All rights reserved.</span>
-    </div>
+    </div> -->
   </div>
 </footer>
