--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -85,7 +85,7 @@ People share bits of code, fix what’s off, build cooler stuff – easy for eve
     {
       recentPosts.length > 0 && (
         <section id="recent-posts" class="pt-12 pb-6">
-          <h2 class="text-2xl font-semibold tracking-wide">Recent Posts</h2>
+          <h2 class="text-2xl font-semibold tracking-wide">最近的文章</h2>
           <ul>
             {recentPosts.map(
               (data, index) =>
@@ -98,7 +98,7 @@ People share bits of code, fix what’s off, build cooler stuff – easy for eve
 
     <div class="my-8 text-center">
       <LinkButton href="/posts/">
-        All Posts
+        全部文章
         <IconArrowRight class="inline-block rtl:-rotate-180" />
       </LinkButton>
     </div>
