--- a/src/pages/archives/index.astro
+++ b/src/pages/archives/index.astro
@@ -33,7 +33,7 @@ const months = [
 
 <Layout title={`Archives | ${SITE.title}`}>
   <Header />
-  <Main pageTitle="Archives" pageDesc="All the articles I've archived.">
+  <Main pageTitle="Archives" pageDesc="所有文章的归档">
     {
       Object.entries(
         getPostsByGroupCondition(posts, post =>
