code lean work mean

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,7 +46,7 @@ const recentPosts = sortedPosts.filter(({ data }) => !data.featured);
 People share bits of code, fix what’s off, build cooler stuff – easy for everyone to use. 
       </p>
       <p class="mt-2">
- Query Code, Answer Tomorrow.         <!-- <LinkButton
+ Code Lean, Work Mean.         <!-- <LinkButton
           class="underline decoration-dashed underline-offset-4 hover:text-accent"
           href="https://github.com/satnaing/astro-paper#readme"
         >
