--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,6 +8,8 @@ import IconSunHigh from "@/assets/icons/IconSunHigh.svg";
 import IconMenuDeep from "@/assets/icons/IconMenuDeep.svg";
 import LinkButton from "./LinkButton.astro";
 import { SITE } from "@/config";
+import SpeedInsights from '@vercel/speed-insights/astro';
+const { title, description } = Astro.props;
 
 const { pathname } = Astro.url;
 
@@ -24,6 +26,7 @@ const isActive = (path: string) => {
 ---
 
 <header>
+  <SpeedInsights />
   <a
     id="skip-to-content"
     href="#main-content"
