feat: add links page

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -84,6 +84,12 @@ const isActive = (path: string) => {
               关于
             </a>
           </li>
+                    <li class="col-span-2">
+            <a href="/links" class:list={{ "active-nav": isActive("/links") }}>
+              友链
+            </a>
+          </li>
+
           {
             SITE.showArchives && (
               <li class="col-span-2">
