--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -61,7 +61,7 @@ const structuredData = {
     <Analytics/>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://byte.beer/fav.svg" />
     <link rel="canonical" href={canonicalURL} />
     <meta name="generator" content={Astro.generator} />
 
