feat: add Han Analytics

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -55,6 +55,10 @@ const structuredData = {
   class={`${scrollSmooth && "scroll-smooth"}`}
 >
   <head>
+
+    <!-- Han Web Analytics -->
+         <script defer src="/tracker.min.js" data-website-id="BlogAnalytics"></script>
+
     <!-- Vercel Speed Insights -->
     <SpeedInsights/>
     <!-- Vercel Web Analytics -->
