feat: add Han Web Analytics

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -57,7 +57,7 @@ const structuredData = {
   <head>
 
     <!-- Han Web Analytics -->
-         <script defer src="/tracker.min.js" data-website-id="BlogAnalytics"></script>
+         <script defer src="https://pv.byte.beer/tracker.min.js" data-website-id="BlogAnalytics"></script>
 
     <!-- Vercel Speed Insights -->
     <SpeedInsights/>
