--- a/src/components/Tag.astro
+++ b/src/components/Tag.astro
@@ -24,13 +24,13 @@ const { tag, tagName, size = "sm" } = Astro.props;
       { "text-sm": size === "sm" },
     ]}
   >
-    <IconHash
+    <!-- <IconHash
       class:list={[
         "inline-block opacity-80",
         { "-me-3.5 size-4": size === "sm" },
         { "-me-5 size-6": size === "lg" },
       ]}
-    />
-    &nbsp;<span>{tagName}</span>
+    /> -->
+    <span>{tagName}</span>
   </a>
 </li>
