--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,7 +6,7 @@
 
 @font-face {
   font-family: 'FZPXYS';
-  src: url('/public/fangzhengpingxianyasong.TTF') format('truetype');
+  src: url('https://static.byte.beer/fangzhengpingxianyasong.subset.woff2') format('truetype');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
