--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,7 +43,7 @@ const recentPosts = sortedPosts.filter(({ data }) => !data.featured);
       </a>
 
       <p>
-People share bits of code, fix what’s off, build cooler stuff – easy for everyone to use. 
+People share bits of code, fix what's off, build cooler stuff – easy for everyone to use. 
       </p>
       <p class="mt-2">
  Freedom in code gives wings to thought.         <!-- <LinkButton
