--- a/src/pages/archives/index.astro
+++ b/src/pages/archives/index.astro
@@ -31,7 +31,7 @@ const months = [
 ];
 ---
 
-<Layout title={`Archives | ${SITE.title}`}>
+<Layout title={`归档 | ${SITE.title}`}>
   <Header />
   <Main pageTitle="归档" pageDesc="所有文章的归档">
     {
