feat: add sitemap

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -55,6 +55,11 @@ const structuredData = {
   class={`${scrollSmooth && "scroll-smooth"}`}
 >
   <head>
+    <!-- SITEMAP -->
+    <link rel="sitemap" href="/sitemap-index.xml" />
+
+
+
 
     <!-- font -->
      <link rel='stylesheet' href='https://chinese-fonts-cdn.deno.dev/packages/sypxzs/dist/%E6%80%9D%E6%BA%90%E5%B1%8F%E6%98%BE%E8%87%BB%E5%AE%8B/result.css' /> 
