--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -57,20 +57,12 @@ const structuredData = {
   <head>
     <!-- SITEMAP -->
     <link rel="sitemap" href="/sitemap-index.xml" />
-
-
-
-
+    <link rel='stylesheet' href='https://font.byte.beer/result.css' /> 
     <!-- font -->
-     <link rel='stylesheet' href='https://chinese-fonts-cdn.deno.dev/packages/sypxzs/dist/%E6%80%9D%E6%BA%90%E5%B1%8F%E6%98%BE%E8%87%BB%E5%AE%8B/result.css' /> 
 
-    <!-- Han Web Analytics -->
-         <script defer src="https://pv.byte.beer/tracker.min.js" data-website-id="BlogAnalytics"></script>
+    <!-- umami -->
+     <script defer src="https://umami.byte.beer/script.js" data-website-id="4fed7811-6105-4a22-92d5-d90d9449472d"></script>
 
-    <!-- Vercel Speed Insights -->
-    <SpeedInsights/>
-    <!-- Vercel Web Analytics -->
-    <Analytics/>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="https://byte.beer/fav.svg" />
