--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -57,8 +57,12 @@ const structuredData = {
   <head>
     <!-- SITEMAP -->
     <link rel="sitemap" href="/sitemap-index.xml" />
-    <link rel='stylesheet' href='https://font.byte.beer/result.css' /> 
     <!-- font -->
+<link rel="preload" href="https://font.byte.beer/result.css" as="style" onload="this.rel='stylesheet'">
+<noscript><link rel="stylesheet" href="https://font.byte.beer/result.css"></noscript>
+
+
+
 
     <!-- umami -->
      <script defer src="https://umami.byte.beer/script.js" data-website-id="4fed7811-6105-4a22-92d5-d90d9449472d"></script>
