feat change icons

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -58,8 +58,7 @@ const structuredData = {
     <!-- SITEMAP -->
     <link rel="sitemap" href="/sitemap-index.xml" />
     <!-- font -->
-<link rel="preload" href="https://font.byte.beer/result.css" as="style" onload="this.rel='stylesheet'">
-<noscript><link rel="stylesheet" href="https://font.byte.beer/result.css"></noscript>
+<link rel="stylesheet" href="https://static.byte.beer/fonts/misans/result.css">
 
 
 
