--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -89,6 +89,13 @@ const isActive = (path: string) => {
               友链
             </a>
           </li>
+           </li>
+                              <li class="col-span-2">
+                      <a href="/1024" class:list={{ "active-nav": isActive("/1024") }}>
+                        1024
+                      </a>
+                    </li>
+
 
           {
             SITE.showArchives && (
