--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,14 +10,20 @@ export interface Props {
 
 const { noMarginTop = false } = Astro.props;
 ---
-
+<div style="text-align: center;">
+  <a href="https://byte.beer/1024" target="_blank">Happy 1024!</a>
+</div>
 <footer class:list={["w-full", { "mt-auto": !noMarginTop }]}>
+
   <Hr noPadding />
   <br>
    <p style="text-align: center;">Open Source changes everything!</p>
+
 <div style="text-align: center;">
   <a href="https://icp.gov.moe/?keyword=20256989" target="_blank">萌ICP备20256989号</a>
 </div>
+
+
 
   <div
     class="flex flex-col items-center justify-between py-6 sm:flex-row-reverse sm:py-4"
